[gd_scene load_steps=17 format=2]

[ext_resource path="res://DraggableWindow.tscn" type="PackedScene" id=1]
[ext_resource path="res://DraggableFileDialog.gd" type="Script" id=2]
[ext_resource path="res://FileButton.tscn" type="PackedScene" id=3]
[ext_resource path="res://Assets/icon_add_folder.png" type="Texture" id=4]
[ext_resource path="res://Assets/icon_ok.png" type="Texture" id=5]
[ext_resource path="res://MessageBox.tscn" type="PackedScene" id=6]
[ext_resource path="res://Assets/icon_drive.png" type="Texture" id=7]
[ext_resource path="res://DriveButton.gd" type="Script" id=8]
[ext_resource path="res://Assets/icon_detail_view.png" type="Texture" id=9]
[ext_resource path="res://Assets/icon_thumbnail_view.png" type="Texture" id=10]
[ext_resource path="res://Assets/icon_sort_by_date.png" type="Texture" id=11]
[ext_resource path="res://Assets/icon_sort_by_name.png" type="Texture" id=12]
[ext_resource path="res://Assets/icon_sort_by_date_r.png" type="Texture" id=13]
[ext_resource path="res://Assets/icon_sort_by_name_r.png" type="Texture" id=14]
[ext_resource path="res://PhotoButton.gd" type="Script" id=15]
[ext_resource path="res://Assets/icon_photo.png" type="Texture" id=16]

[node name="DraggableFileDialog" type="Control"]
visible = false
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}
file_button_size = Vector2( 200, 100 )

[node name="DraggableWindow" parent="." instance=ExtResource( 1 )]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 0.0
margin_right = 1280.0
margin_bottom = 800.0
full_screen = true

[node name="ScrollContainer" type="ScrollContainer" parent="DraggableWindow"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_top = 70.0
margin_right = -20.0
margin_bottom = -50.0
scroll_horizontal_enabled = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GridContainer" type="GridContainer" parent="DraggableWindow/ScrollContainer"]
margin_right = 884.0
margin_bottom = 210.0
custom_constants/vseparation = 10
custom_constants/hseparation = 12
columns = 8
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FileButton" parent="DraggableWindow/ScrollContainer/GridContainer" instance=ExtResource( 3 )]

[node name="FileButton2" parent="DraggableWindow/ScrollContainer/GridContainer" instance=ExtResource( 3 )]
margin_left = 112.0
margin_right = 212.0

[node name="FileButton3" parent="DraggableWindow/ScrollContainer/GridContainer" instance=ExtResource( 3 )]
margin_left = 224.0
margin_right = 324.0

[node name="FileButton4" parent="DraggableWindow/ScrollContainer/GridContainer" instance=ExtResource( 3 )]
margin_left = 336.0
margin_right = 436.0

[node name="FileButton5" parent="DraggableWindow/ScrollContainer/GridContainer" instance=ExtResource( 3 )]
margin_left = 448.0
margin_right = 548.0

[node name="FileButton6" parent="DraggableWindow/ScrollContainer/GridContainer" instance=ExtResource( 3 )]
margin_left = 560.0
margin_right = 660.0

[node name="FileButton7" parent="DraggableWindow/ScrollContainer/GridContainer" instance=ExtResource( 3 )]
margin_left = 672.0
margin_right = 772.0

[node name="FileButton8" parent="DraggableWindow/ScrollContainer/GridContainer" instance=ExtResource( 3 )]
margin_left = 784.0
margin_right = 884.0

[node name="FileButton9" parent="DraggableWindow/ScrollContainer/GridContainer" instance=ExtResource( 3 )]
margin_top = 110.0
margin_bottom = 210.0

[node name="FileButton10" parent="DraggableWindow/ScrollContainer/GridContainer" instance=ExtResource( 3 )]
margin_left = 112.0
margin_top = 110.0
margin_right = 212.0
margin_bottom = 210.0

[node name="FileButton11" parent="DraggableWindow/ScrollContainer/GridContainer" instance=ExtResource( 3 )]
margin_left = 224.0
margin_top = 110.0
margin_right = 324.0
margin_bottom = 210.0

[node name="FileButton12" parent="DraggableWindow/ScrollContainer/GridContainer" instance=ExtResource( 3 )]
margin_left = 336.0
margin_top = 110.0
margin_right = 436.0
margin_bottom = 210.0

[node name="FileButton13" parent="DraggableWindow/ScrollContainer/GridContainer" instance=ExtResource( 3 )]
margin_left = 448.0
margin_top = 110.0
margin_right = 548.0
margin_bottom = 210.0

[node name="FileButton14" parent="DraggableWindow/ScrollContainer/GridContainer" instance=ExtResource( 3 )]
margin_left = 560.0
margin_top = 110.0
margin_right = 660.0
margin_bottom = 210.0

[node name="FileButton15" parent="DraggableWindow/ScrollContainer/GridContainer" instance=ExtResource( 3 )]
margin_left = 672.0
margin_top = 110.0
margin_right = 772.0
margin_bottom = 210.0

[node name="HBoxContainer" type="HBoxContainer" parent="DraggableWindow"]
anchor_right = 1.0
margin_left = 15.0
margin_top = 10.0
margin_right = -63.9998
margin_bottom = 50.0
rect_min_size = Vector2( 0, 40 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DriveButton" type="MenuButton" parent="DraggableWindow/HBoxContainer"]
margin_right = 100.0
margin_bottom = 40.0
rect_min_size = Vector2( 100, 0 )
text = "C:"
icon = ExtResource( 7 )
expand_icon = true
script = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PhotoButton" type="MenuButton" parent="DraggableWindow/HBoxContainer"]
margin_left = 104.0
margin_right = 204.0
margin_bottom = 40.0
rect_min_size = Vector2( 100, 0 )
focus_mode = 2
text = "Photo"
icon = ExtResource( 16 )
expand_icon = true
script = ExtResource( 15 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PathLineEdit" type="LineEdit" parent="DraggableWindow/HBoxContainer"]
margin_left = 208.0
margin_right = 808.0
margin_bottom = 40.0
rect_min_size = Vector2( 600, 0 )
editable = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AddFolderButton" type="Button" parent="DraggableWindow/HBoxContainer"]
margin_left = 812.0
margin_right = 852.0
margin_bottom = 40.0
rect_min_size = Vector2( 40, 40 )
icon = ExtResource( 4 )
expand_icon = true

[node name="NewFolderNamePopup" parent="DraggableWindow/HBoxContainer/AddFolderButton" instance=ExtResource( 1 )]
margin_left = 1.31885
margin_top = -75.491
margin_right = 301.319
margin_bottom = -35.491
rect_min_size = Vector2( 0, 40 )

[node name="HBoxContainer" type="HBoxContainer" parent="DraggableWindow/HBoxContainer/AddFolderButton/NewFolderNamePopup"]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = 10.0
margin_top = -12.0
margin_right = -50.0
margin_bottom = -12.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NewFolderNameLineEdit" type="LineEdit" parent="DraggableWindow/HBoxContainer/AddFolderButton/NewFolderNamePopup/HBoxContainer"]
margin_right = 200.0
margin_bottom = 26.0
rect_min_size = Vector2( 200, 24 )
placeholder_text = "New folder name"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NewFolderOkButton" type="TextureButton" parent="DraggableWindow/HBoxContainer/AddFolderButton/NewFolderNamePopup/HBoxContainer"]
margin_left = 204.0
margin_right = 229.0
margin_bottom = 26.0
rect_min_size = Vector2( 25, 25 )
texture_normal = ExtResource( 5 )
expand = true

[node name="DetailViewButton" type="TextureButton" parent="DraggableWindow/HBoxContainer"]
margin_left = 856.0
margin_right = 896.0
margin_bottom = 40.0
rect_min_size = Vector2( 40, 40 )
toggle_mode = true
texture_normal = ExtResource( 9 )
texture_pressed = ExtResource( 10 )
expand = true

[node name="SortByNameButton" type="TextureButton" parent="DraggableWindow/HBoxContainer"]
margin_left = 900.0
margin_right = 940.0
margin_bottom = 40.0
rect_min_size = Vector2( 40, 40 )
toggle_mode = true
pressed = true
texture_normal = ExtResource( 14 )
texture_pressed = ExtResource( 12 )
expand = true

[node name="SortByDateButton" type="TextureButton" parent="DraggableWindow/HBoxContainer"]
margin_left = 944.0
margin_right = 984.0
margin_bottom = 40.0
rect_min_size = Vector2( 40, 40 )
toggle_mode = true
texture_normal = ExtResource( 13 )
texture_pressed = ExtResource( 11 )
expand = true

[node name="ColorRect" type="ColorRect" parent="DraggableWindow"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -40.0
rect_min_size = Vector2( 0, 40 )
color = Color( 0.478431, 0.478431, 0.478431, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer2" type="HBoxContainer" parent="DraggableWindow/ColorRect"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -40.0
rect_min_size = Vector2( 0, 40 )
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FileNameLineEdit" type="LineEdit" parent="DraggableWindow/ColorRect/HBoxContainer2"]
margin_left = 304.0
margin_right = 804.0
margin_bottom = 40.0
rect_min_size = Vector2( 500, 40 )
placeholder_text = "File name"

[node name="OkButton" type="Button" parent="DraggableWindow/ColorRect/HBoxContainer2"]
margin_left = 808.0
margin_right = 852.0
margin_bottom = 40.0
icon = ExtResource( 5 )
flat = true

[node name="SelectedFileNumsLabel" type="Label" parent="DraggableWindow/ColorRect/HBoxContainer2"]
margin_left = 856.0
margin_top = 12.0
margin_right = 976.0
margin_bottom = 28.0
text = "0 file(s) selected"

[node name="MessageBox" parent="." instance=ExtResource( 6 )]
visible = false

[connection signal="hide" from="." to="." method="_on_DraggableFileDialog_hide"]
[connection signal="pressed" from="DraggableWindow/HBoxContainer/DriveButton" to="DraggableWindow/HBoxContainer/DriveButton" method="_on_DriveButton_pressed"]
[connection signal="pressed" from="DraggableWindow/HBoxContainer/PhotoButton" to="." method="_on_PhotoButton_pressed"]
[connection signal="pressed" from="DraggableWindow/HBoxContainer/AddFolderButton" to="." method="_on_AddFolderButton_pressed"]
[connection signal="pressed" from="DraggableWindow/HBoxContainer/AddFolderButton/NewFolderNamePopup/HBoxContainer/NewFolderOkButton" to="." method="_on_NewFolderOkButton_pressed"]
[connection signal="toggled" from="DraggableWindow/HBoxContainer/DetailViewButton" to="." method="_on_DetailViewButton_toggled"]
[connection signal="pressed" from="DraggableWindow/HBoxContainer/SortByNameButton" to="." method="_on_SortByNameButton_pressed"]
[connection signal="pressed" from="DraggableWindow/HBoxContainer/SortByDateButton" to="." method="_on_SortByDateButton_pressed"]
[connection signal="text_changed" from="DraggableWindow/ColorRect/HBoxContainer2/FileNameLineEdit" to="." method="_on_FileNameLineEdit_text_changed"]
[connection signal="pressed" from="DraggableWindow/ColorRect/HBoxContainer2/OkButton" to="." method="_on_OkButton_pressed"]
[connection signal="hide" from="MessageBox" to="." method="_on_MessageBox_hide"]
